software/pcx86/sys/windows/1.02/README.md
---
layout: page
title: Microsoft Windows 1.02
permalink: /software/pcx86/sys/windows/1.02/
redirect_from: /disks/pcx86/windows/1.02/
---

Directory listings of the six 360Kb distribution diskettes are provided below.

### Directory of Windows 1.02 (SETUP)

     Volume in drive A is SETUP
     Directory of A:\

    SETUP    LBL         7   1-15-86   6:00p
    SETUP    EXE     36350   1-15-86   6:00p
    KERNEL   EXE     34015   1-15-86   6:00p
    SYSTEM   DRV      2593   1-15-86   6:00p
    USA      DRV      3335   1-15-86   6:00p
    UK       DRV      3335   1-15-86   6:00p
    GERMANY  DRV      3941   1-15-86   6:00p
    FRANCE   DRV      3965   1-15-86   6:00p
    ITALY    DRV      3347   1-15-86   6:00p
    SPAIN    DRV      3939   1-15-86   6:00p
    SWEDEN   DRV      3983   1-15-86   6:00p
    NORWAY   DRV      3983   1-15-86   6:00p
    DENMARK  DRV      3983   1-15-86   6:00p
    NOMOUSE  DRV      1592   1-15-86   6:00p
    MOUSE    DRV      3239   1-15-86   6:00p
    MSMOUSE1 DRV      1966   1-15-86   6:00p
    MSMOUSE2 DRV      1966   1-15-86   6:00p
    LMOUSE   DRV      2484   1-15-86   6:00p
    LPC      DRV      2438   1-15-86   6:00p
    FTG      DRV      1961   1-15-86   6:00p
    JOYMOUSE DRV      2114   1-15-86   6:00p
    CGA      DRV     13008   1-15-86   6:00p
    HERCULES DRV     15776   1-15-86   6:00p
    EGAMONO  DRV     13952   1-15-86   6:00p
    EGAHIBW  DRV     13952   1-15-86   6:00p
    EGALORES DRV     15648   1-15-86   6:00p
    EGAHIRES DRV     17536   1-15-86   6:00p
    SOUND    DRV      5853   1-15-86   6:00p
    COMM     DRV      4860   1-15-86   6:00p
    LOFONTS  FON      5552   1-15-86   6:00p
    HIFONTS  FON      7472   1-15-86   6:00p
    RAMDRIVE SYS      6459   1-15-86   6:00p
    EMM      PC      12898   1-15-86   6:00p
    EMM      AT      12874   1-15-86   6:00p
    WRITE    DAT        43   1-15-86   6:00p
    README   DOC       397   1-15-86   9:06p
           36 file(s)     270816 bytes
                           73728 bytes free

### Directory of Windows 1.02 (BUILD)

     Volume in drive A is BUILD
     Directory of A:\

    BUILD    LBL         7   1-16-86   4:00p
    GDI      EXE     94270   1-16-86   4:00p
    USER     EXE    122416   1-16-86   4:00p
    MSDOSD   EXE      5934   1-16-86   4:00p
    MSDOS    EXE     42336   1-16-86   4:00p
    CGA      GRB      1350   1-16-86   4:00p
    EGALORES GRB      1213   1-16-86   4:00p
    EGAHIRES GRB        15   1-16-86   4:00p
    EGAHIBW  GRB        15   1-16-86   4:00p
    EGAMONO  GRB      1061   1-16-86   4:00p
    HERCULES GRB      1250   1-16-86   4:00p
    WIN      CNF      1936   1-16-86   4:00p
    EGALORES LGO         9   1-16-86   4:00p
    EGAHIRES LGO         9   1-16-86   4:00p
    EGAHIBW  LGO         9   1-16-86   4:00p
    EGAMONO  LGO      2930   1-16-86   4:00p
    HERCULES LGO      3054   1-16-86   4:00p
    CGA      LGO      2931   1-16-86   4:00p
    WIN      INI      2067   1-16-86   4:00p
    WINOLDAP MOD     19552   1-16-86   4:00p
    SPOOLER  EXE     13264   1-16-86   4:00p
           21 file(s)     315628 bytes
                           32768 bytes free

### Directory of Windows 1.02 (UTILITY)

     Volume in drive A is UTILITY
     Directory of A:\

    UTILITY  LBL         9   1-15-86   6:00p
    README   DOC      2922   1-15-86   6:00p
    EPSON    DRV     14352   1-15-86   6:00p
    NEC3550  DRV     21824   1-15-86   6:00p
    HPLASER  DRV     16640   1-15-86   6:00p
    HP747XA  DRV     22304   1-15-86   6:00p
    IBMGRX   DRV     12032   1-15-86   6:00p
    OKI92    DRV     12416   1-15-86   6:00p
    CITOH    DRV     12048   1-15-86   6:00p
    TI850    DRV     11584   1-15-86   6:00p
    LQ1500   DRV     14544   1-15-86   6:00p
    TOSH     DRV     12432   1-15-86   6:00p
    NECP2    DRV     12304   1-15-86   6:00p
    SG10     DRV     14848   1-15-86   6:00p
    EPSONMX  DRV     12176   1-15-86   6:00p
           15 file(s)     192435 bytes
                          160768 bytes free

### Directory of Windows 1.02 (FONT)

     Volume in drive A is FONT
     Directory of A:\

    PIF          <DIR>       1-15-86   5:37p
    FONT     LBL         6   1-15-86   6:00p
    COURA    FON      8720   1-15-86   6:00p
    COURB    FON     12304   1-15-86   6:00p
    COURC    FON      8784   1-15-86   6:00p
    COURD    FON     15136   1-15-86   6:00p
    HELVA    FON      8032   1-15-86   6:00p
    HELVB    FON     10480   1-15-86   6:00p
    HELVC    FON      8656   1-15-86   6:00p
    HELVD    FON     12224   1-15-86   6:00p
    TMSRA    FON      8208   1-15-86   6:00p
    TMSRB    FON     10784   1-15-86   6:00p
    TMSRC    FON      8240   1-15-86   6:00p
    TMSRD    FON     12608   1-15-86   6:00p
    ROMAN    FON     11120   1-15-86   6:00p
    SCRIPT   FON     10256   1-15-86   6:00p
    MODERN   FON      7568   1-15-86   6:00p
           17 file(s)     153126 bytes

     Directory of A:\PIF

    .            <DIR>       1-15-86   5:37p
    ..           <DIR>       1-15-86   5:37p
    PIFEDIT  EXE     28528   1-15-86   6:00p
    123      PIF       369   1-15-86   6:00p
    123-2    PIF       369   1-15-86   6:00p
    BASCOM   PIF       369   1-15-86   6:00p
    BASIC    PIF       369   1-15-86   6:00p
    BASICA   PIF       369   1-15-86   6:00p
    CHART    PIF       369   1-15-86   6:00p
    CLOUT    PIF       369   1-15-86   6:00p
    DBASE    PIF       369   1-15-86   6:00p
    DBASE2   PIF       369   1-15-86   6:00p
    DBASE3   PIF       369   1-15-86   6:00p
    DW2PG    PIF       369   1-15-86   6:00p
    DW3PG    PIF       369   1-15-86   6:00p
    FILE     PIF       369   1-15-86   6:00p
    FW       PIF       369   1-15-86   6:00p
    FWC      PIF       369   1-15-86   6:00p
    FWT      PIF       369   1-15-86   6:00p
    GRAPH    PIF       369   1-15-86   6:00p
    HTPM     PIF       369   1-15-86   6:00p
    IBMFILE  PIF       369   1-15-86   6:00p
    IBMGRAPH PIF       369   1-15-86   6:00p
    IBMREPRT PIF       369   1-15-86   6:00p
    IBMWRITE PIF       369   1-15-86   6:00p
    LOTUS    PIF       369   1-15-86   6:00p
    LOTUS2   PIF       369   1-15-86   6:00p
    MP       PIF       369   1-15-86   6:00p
    MP40     PIF       369   1-15-86   6:00p
    MP80     PIF       369   1-15-86   6:00p
    MSACCESS PIF       369   1-15-86   6:00p
    PE       PIF       369   1-15-86   6:00p
    PC-DRAW  PIF       369   1-15-86   6:00p
    PFSACCES PIF       369   1-15-86   6:00p
    PLAN     PIF       369   1-15-86   6:00p
    PROEDIT  PIF       369   1-15-86   6:00p
    PROJ     PIF       369   1-15-86   6:00p
    PROJM    PIF       369   1-15-86   6:00p
    RB5000   PIF       369   1-15-86   6:00p
    RBASE    PIF       369   1-15-86   6:00p
    REPORT   PIF       369   1-15-86   6:00p
    RG       PIF       369   1-15-86   6:00p
    SC3      PIF       369   1-15-86   6:00p
    SCOM     PIF       369   1-15-86   6:00p
    SCOMII   PIF       369   1-15-86   6:00p
    SPELL    PIF       369   1-15-86   6:00p
    SYMPHACC PIF       369   1-15-86   6:00p
    SYMPHONY PIF       369   1-15-86   6:00p
    TURBO    PIF       369   1-15-86   6:00p
    TURBOBCD PIF       369   1-15-86   6:00p
    TURBO-87 PIF       369   1-15-86   6:00p
    VX       PIF       369   1-15-86   6:00p
    WORD     PIF       369   1-15-86   6:00p
    WORDEGA  PIF       369   1-15-86   6:00p
    WP       PIF       369   1-15-86   6:00p
    WRDPERF  PIF       369   1-15-86   6:00p
    WRITE    PIF       369   1-15-86   6:00p
    WS       PIF       369   1-15-86   6:00p
    WS2000   PIF       369   1-15-86   6:00p
    XTALK    PIF       369   1-15-86   6:00p
    XYWRITE  PIF       369   1-15-86   6:00p
           61 file(s)      49930 bytes

    Total files listed:
           78 file(s)     203056 bytes
                          109568 bytes free

### Directory of Windows 1.02 (APPS)

     Volume in drive A is APPS
     Directory of A:\

    CALC     EXE     25008   1-15-86   6:00p
    CALENDAR EXE     37552   1-15-86   6:00p
    CARDFILE EXE     36992   1-15-86   6:00p
    CLIPBRD  EXE      9712   1-15-86   6:00p
    CLOCK    EXE      7920   1-15-86   6:00p
    CONTROL  EXE     53952   1-15-86   6:00p
    NOTEPAD  EXE     18736   1-15-86   6:00p
    PAINT    EXE     90144   1-15-86   6:00p
    REVERSI  EXE     15328   1-15-86   6:00p
    TERMINAL EXE     47344   1-15-86   6:00p
    ABC      TXT        42   1-15-86   6:00p
    DOTHIS   TXT       493   1-15-86   6:00p
           12 file(s)     343223 bytes
                           12288 bytes free

### Directory of Windows 1.02 (WRITE)

     Volume in drive A is WRITE
     Directory of A:\

    README   DOC      2922   1-15-86   6:00p
    WRITE    EXE    191232   1-15-86   6:00p
    PRACTICE DOC      2944   1-15-86   6:00p
            3 file(s)     197098 bytes
                          164864 bytes free
